<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp150"
    android:background="@drawable/full_map_green_card">

    <include
        android:id="@+id/directions_map"
        layout="@layout/navigation_card"
        android:layout_width="@dimen/dp94"
        android:layout_height="@dimen/dp94"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginTop="@dimen/dp5" />


    <harman.com.freelauncher.customui.RobotoRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/directions_map"

        android:layout_marginStart="@dimen/dp12"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/turn_info"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp36" />

    <harman.com.freelauncher.customui.RobotoRegularTextView
        android:id="@+id/broadway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginStart="345dp"
        android:text="@string/dest_street"
        android:textColor="#ffffff"
        android:textSize="@dimen/sp60" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/broadway"
        android:layout_marginTop="@dimen/dp11"
        android:layout_marginStart="@dimen/dp190"
        android:orientation="horizontal">

        <harman.com.freelauncher.customui.RobotoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dest_mins"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp40" />

        <harman.com.freelauncher.customui.RobotoRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dest_miles"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp40" />

        <harman.com.freelauncher.customui.RobotoRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp19"
            android:layout_weight="1"
            android:text="@string/dest_time"
            android:textAlignment="textEnd"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp40" />
    </LinearLayout>

</RelativeLayout>

