<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lt_grey_panel_card">

    <ImageView
        android:id="@+id/appointment_con"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp67"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_confirm" />


    <harman.com.freelauncher.customui.NSRegularTextView
        android:id="@+id/appointment_con_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="Appointment Confirmed"
        android:textColor="#0487A5"
        android:textSize="@dimen/sp54" />


    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <harman.com.freelauncher.customui.NSBoldTextView
            android:id="@+id/appt_fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="147dp"
            android:gravity="center"
            android:text="@string/appt2"
            android:textColor="#000000"
            android:textSize="@dimen/sp60" />

        <harman.com.freelauncher.customui.NSRegularTextView
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="Rairdon's Chrysler of Kirkland"
            android:textSize="@dimen/sp42" />

        <harman.com.freelauncher.customui.NSRegularTextView
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/street"
            android:textSize="@dimen/sp42" />

    </LinearLayout>

    <harman.com.freelauncher.customui.NSRegularButton
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/dp24"
        android:layout_marginRight="@dimen/dp24"
        android:layout_marginTop="429dp"
        android:text="@string/ok"
        android:textSize="@dimen/sp42" />
</RelativeLayout>