<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp24"
        android:layout_marginTop="@dimen/dp19"
        android:src="@drawable/aha_logo" />

    <TextView
        android:id="@+id/App_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todays_hits"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp54" />

    <ImageView
        android:id="@+id/albumart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_album_art" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/something_only_i_can_see"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp54" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/this_american_life"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp34" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp24"
        android:layout_marginRight="@dimen/dp24"
        android:layout_marginTop="@dimen/dp16"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:max="100"
            android:progress="50"
            android:progressTint="#E08B19" />

        <RelativeLayout
            android:layout_width="876dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@android:color/white">


            <ImageView
                android:id="@+id/previous_icon"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp112"
                android:src="@drawable/ic_skip_previous" />

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="@dimen/dp101"
                android:layout_height="@dimen/dp101"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/next_icon"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/dp112"
                android:src="@drawable/ic_skip_next" />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>