<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp">

        <ImageView
            android:id="@+id/caller_image"
            android:layout_width="171dp"
            android:layout_height="171dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="135dp"
            android:src="@drawable/default_caller_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="45dp"
            android:layout_toEndOf="@+id/caller_image"
            android:orientation="vertical">


            <harman.com.freelauncher.customui.RobotoRegularTextView
                android:id="@+id/caller_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Jeanne Anderson"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp60" />

            <harman.com.freelauncher.customui.RobotoRegularTextView
                android:id="@+id/Caller_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="(313)654-7446"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp55" />

            <harman.com.freelauncher.customui.RobotoRegularTextView
                android:id="@+id/Caller_numbers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:textColor="#ffffff"
                android:text="10:46:00"
                android:textSize="@dimen/sp40" />
        </LinearLayout>
    </RelativeLayout>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardCornerRadius="2dp"
    android:layout_marginLeft="130dp"
    android:layout_marginRight="130dp"
    android:layout_marginTop="45dp"
    app:cardElevation="15dp">
    <LinearLayout
        android:id="@+id/hangup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/red_btn"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_end_call" />
    </LinearLayout>
</android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginLeft="@dimen/dp24"
        android:layout_marginRight="@dimen/dp24"
        android:layout_marginTop="99dp"
        android:background="@drawable/phone_card">


        <harman.com.freelauncher.customui.RobotoRegularTextView
            android:id="@+id/call_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="114dp"
            android:layout_marginTop="36dp"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/ic_call_transfer"
            android:gravity="center"
            android:text="@string/transfer"
            android:textColor="#000000"
            android:textSize="@dimen/sp30" />

        <harman.com.freelauncher.customui.RobotoRegularTextView
            android:id="@+id/mute_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:drawablePadding="@dimen/dp12"
            android:drawableTop="@drawable/ic_call_mute"
            android:gravity="center"
            android:text="@string/mute"
            android:textColor="#000000"
            android:textSize="@dimen/sp30" />

        <harman.com.freelauncher.customui.RobotoRegularTextView
            android:id="@+id/keypad_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="127dp"
            android:layout_marginTop="36dp"
            android:drawablePadding="@dimen/dp12"
            android:drawableTop="@drawable/ic_keypad"
            android:gravity="center"
            android:text="@string/keypad"
            android:textColor="#000000"
            android:textSize="@dimen/sp30" />
    </RelativeLayout>
</LinearLayout>